# darija-translator

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_exploration.ipynb
scripts/: smoke_test_model.py  smoke_test_train.py
src/darija_translator/: __init__.py  cli.py  config.py  data.py  evaluate.py  model.py  train.py
tests/: test_config.py  test_data.py  test_evaluate.py
