[project]
name = "darija-translator"
version = "0.1.0"
description = "Fine-tuning LFM2.5 for English-Darija translation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
eval = [
    "sacrebleu>=2.4",
]

[project.scripts]
darija-translator = "darija_translator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/darija_translator"]

[tool.pytest.ini_options]
pythonpath = ["src"]
