[project]
name = "darija-translator"
version = "0.1.0"
description = "Fine-tuning LFM2.5 for English-Darija translation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
eval = [
    "sacrebleu>=2.6.0",
]
train = [
    "datasets>=5.0.0",
    "trl>=1.7.1",
    "unsloth>=2026.7.2",
    "wandb>=0.28.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
darija-translator = "darija_translator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/darija_translator"]

[tool.pytest.ini_options]
pythonpath = ["src"]